--- a/Finnish/main/Mms.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/Mms.apk/res/values-fi-rFI/strings.xml
@@ -1,10 +1,6 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <resources>
   <!-- MIUI 10 valmis -->
-  <string name="notification_channel_description">Ilmoituksia Viestit - sovelluksesta</string>
-  <string name="notification_channel_name">Viestit</string>
-  <string name="notification_copy">Kopioi OTP</string>
-  <string name="status_bar_notification_info_overflow">999+</string>
   <string name="toast_pending_hangup_msg">Viesti lähetetään puhelun päätyttyä</string>
   <string name="url_scan_again">Tarkista uudelleen</string>
   <!-- MIUI 10 valmis -->
@@ -373,8 +369,18 @@
   <string name="no_subject_view">(Ei otsikkoa)</string>
   <string name="non_english_subject_limit">13 merkin raja</string>
   <string name="nosend_message">Älä lähetä</string>
+  <string name="notification_channel_msg_description">Viesti-ilmoitus</string>
+  <string name="notification_channel_msg_name">Viesti</string>
+  <string name="notification_channel_other_description">Muu ilmoitus</string>
+  <string name="notification_channel_other_name">Muu</string>
+  <string name="notification_channel_sim1_description">SIM1:n viesti-ilmoitus</string>
+  <string name="notification_channel_sim1_name">SIM1 Viesti</string>
+  <string name="notification_channel_sim2_description">SIM2:n viesti-ilmoitus</string>
+  <string name="notification_channel_sim2_name">SIM2 Viesti</string>
+  <string name="notification_copy">Kopioi OTP</string>
   <string name="notification_failed_multiple">%s viestiä ei voitu lähettää</string>
   <string name="notification_failed_multiple_title">Viestejä ei lähetetty</string>
+  <string name="notification_group_name">Viestit</string>
   <string name="notification_multiple">[%s]</string>
   <string name="notification_multiple_title">Uusia viestejä</string>
   <string name="number_add_hint">Syötä puhelinnumero</string>
@@ -663,6 +669,7 @@ Yritys tehty: %s."</string>
   <string name="unstick">Poista kiinnitys</string>
   <string name="unstick_conversation">Poista nykyisen keskustelun kiinnitys</string>
   <string name="unsticked_conversation">Keskustelun kiinnitys on jo poistettu</string>
+  <string name="unsubscribe">Poista tilaus</string>
   <string name="unsupported_media_format">%1$s ei ole tuettu muoto.</string>
   <string name="url_fraud_dangerous_alert">"Verkkosivu johon yrität siirtyä voi olla vaarallinen. Se saattaa vahingoittaa laitettasi ja sen tietoja. Siirrytäänkö siitä huolimatta?
 %s"</string>
